--- a/charlist.css
+++ b/charlist.css
@@ -29,6 +29,7 @@ body {
 	font-family: 'robotoregular';
 	font-size: 25px;
 	font-weight: bold;
+	text-transform: capitalize;
 }
 
 .char .info {
@@ -41,8 +42,9 @@ body {
 	color: #FFF;
 }
 .char .battler {
-	margin-left: 10px;
-	float: right;
+	position: absolute;
+	top: 5px;
+	right: 5px;
 }
 .char .sprite {
 	display: inline-block;
