--- a/charlist.css
+++ b/charlist.css
@@ -43,14 +43,18 @@ body {
 }
 .char .battler {
 	position: absolute;
-	top: 5px;
+	top: 10px;
 	right: 5px;
+	min-width: 160px;
+	text-align: center;
+}
+.char .battler img {
+	max-width: 200px;
 }
 .char .sprite {
 	display: inline-block;
 	width: 32px;
 	height: 48px;
-	margin-top: 10px;
 }
 .char#muzet .sprite {
 	height: 32px;
@@ -58,7 +62,7 @@ body {
 .char#neclord .sprite, .char#bleu .sprite {
 	width: 48px;
 }
-.char#elle .sprite {
+.char#elle .sprite, .char#hyades .sprite, .char#mistral .sprite {
 	width: 64px;
 	height: 64px;
 }
@@ -67,97 +71,213 @@ body {
 	height: 64px;
 }
 
+/*For normal sizes (128 x 192)*/
 .animaBottom {
 	animation: playBottom .9s steps(4) infinite;
-	-webkit-animation: playBottom .9s steps(4) infinite;
-	-moz-animation: playBottom .9s steps(4) infinite;
-	-ms-animation: playBottom .9s steps(4) infinite;
-	-o-animation: playBottom .9s steps(4) infinite;
+	margin-left: 10px;
+	margin-top: 26px;
 }
 .animaLeft {
 	animation: playLeft .9s steps(4) infinite;
-	-webkit-animation: playLeft .9s steps(4) infinite;
-	-moz-animation: playLeft .9s steps(4) infinite;
-	-ms-animation: playLeft .9s steps(4) infinite;
-	-o-animation: playLeft .9s steps(4) infinite;
+	margin-left: 10px;
+	margin-top: 26px;
 }
 .animaRight {
 	animation: playRight .9s steps(4) infinite;
-	-webkit-animation: playRight .9s steps(4) infinite;
-	-moz-animation: playRight .9s steps(4) infinite;
-	-ms-animation: playRight .9s steps(4) infinite;
-	-o-animation: playRight .9s steps(4) infinite;
+	margin-left: 10px;
+	margin-top: 26px;
 }
 .animaTop {
 	animation: playTop .9s steps(4) infinite;
-	-webkit-animation: playTop .9s steps(4) infinite;
-	-moz-animation: playTop .9s steps(4) infinite;
-	-ms-animation: playTop .9s steps(4) infinite;
-	-o-animation: playTop .9s steps(4) infinite;
+	margin-left: 10px;
+	margin-top: 26px;
 }
-.paused{
+
+/*For small sizes (128 x 128)*/
+.animaBottomSmall {
+	animation: playBottomSmall .9s steps(4) infinite;
+	margin-left: 10px;
+	margin-top: 26px;
+}
+.animaLeftSmall {
+	animation: playLeftSmall .9s steps(4) infinite;
+	margin-left: 10px;
+	margin-top: 26px;
+}
+.animaRightSmall {
+	animation: playRightSmall .9s steps(4) infinite;
+	margin-left: 10px;
+	margin-top: 26px;
+}
+.animaTopSmall {
+	animation: playTopSmall .9s steps(4) infinite;
+	margin-left: 10px;
+	margin-top: 26px;
+}
+
+/*For medium sizes (192 x 192)*/
+.animaBottomMedium {
+	animation: playBottomMedium .9s steps(4) infinite;
+	margin-left: 10px;
+	margin-top: 26px;
+}
+.animaLeftMedium {
+	animation: playLeftMedium .9s steps(4) infinite;
+	margin-left: 10px;
+	margin-top: 26px;
+}
+.animaRightMedium {
+	animation: playRightMedium .9s steps(4) infinite;
+	margin-left: 10px;
+	margin-top: 26px;
+}
+.animaTopMedium {
+	animation: playTopMedium .9s steps(4) infinite;
+	margin-left: 10px;
+	margin-top: 26px;
+}
+
+/*For big sizes (192 x 256)*/
+.animaBottomBig {
+	animation: playBottomBig .9s steps(4) infinite;
+	margin-left: 10px;
+	margin-top: 10px;
+}
+.animaLeftBig {
+	animation: playLeftBig .9s steps(4) infinite;
+	margin-left: 10px;
+	margin-top: 10px;
+}
+.animaRightBig {
+	animation: playRightBig .9s steps(4) infinite;
+	margin-left: 10px;
+	margin-top: 10px;
+}
+.animaTopBig {
+	animation: playTopBig .9s steps(4) infinite;
+	margin-left: 10px;
+	margin-top: 10px;
+}
+
+/*For large sizes (256 x 256)*/
+.animaBottomLarge {
+	animation: playBottomLarge .9s steps(4) infinite;
+	margin-top: 10px;
+}
+.animaLeftLarge {
+	animation: playLeftLarge .9s steps(4) infinite;
+	margin-top: 10px;
+}
+.animaRightLarge {
+	animation: playRightLarge .9s steps(4) infinite;
+	margin-top: 10px;
+}
+.animaTopLarge {
+	animation: playTopLarge .9s steps(4) infinite;
+	margin-top: 10px;
+}
+
+.paused {
   -webkit-animation-play-state:paused;
   -moz-animation-play-state:paused;
   -o-animation-play-state:paused; 
   animation-play-state:paused;
 }
-.running{
+.running {
   -webkit-animation-play-state:running;
   -moz-animation-play-state:running;
   -o-animation-play-state:running; 
   animation-play-state:running;
 }
 
+/*For normal sizes (128 x 192)*/
 @keyframes playBottom {
 	from { background-position: 0 0; }
 	to { background-position: -128px 0; }
 }
-@-webkit-keyframes playBottom {
-	from { background-position: 0 0; }
-	to { background-position: -128px 0; }
-}
-@-moz-keyframes playBottom {
-	from { background-position: 0 0; }
-	to { background-position: -128px 0; }
-}
-
 @keyframes playLeft {
 	from { background-position: 0 -48px; }
 	to { background-position: -128px -48px; }
 }
-@-webkit-keyframes playLeft {
-	from { background-position: 0 -48px; }
-	to { background-position: -128px -48px; }
-}
-@-moz-keyframes playLeft {
-	from { background-position: 0 -48px; }
-	to { background-position: -128px -48px; }
-}
-
 @keyframes playRight {
 	from { background-position: 0 -96px; }
 	to { background-position: -128px -96px; }
 }
-@-webkit-keyframes playRight {
-	from { background-position: 0 -96px; }
-	to { background-position: -128px -96px; }
+@keyframes playTop {
+	from { background-position: 0 -144px; }
+	to { background-position: -128px -144px; }
 }
-@-moz-keyframes playRight {
+
+/*For small sizes (128 x 128)*/
+@keyframes playBottomSmall {
+	from { background-position: 0 0; }
+	to { background-position: -128px 0; }
+}
+@keyframes playLeftSmall {
+	from { background-position: 0 -32px; }
+	to { background-position: -128px -32px; }
+}
+@keyframes playRightSmall {
+	from { background-position: 0 -64px; }
+	to { background-position: -128px -64px; }
+}
+@keyframes playTopSmall {
 	from { background-position: 0 -96px; }
 	to { background-position: -128px -96px; }
 }
 
-@keyframes playTop {
-	from { background-position: 0 -144px; }
-	to { background-position: -128px -192px; }
+/*For medium sizes (192 x 192)*/
+@keyframes playBottomMedium {
+	from { background-position: 0 0; }
+	to { background-position: -192px 0; }
 }
-@-webkit-keyframes playTop {
-	from { background-position: 0 -144px; }
-	to { background-position: -128px -144px; }
+@keyframes playLeftMedium {
+	from { background-position: 0 -48px; }
+	to { background-position: -192px -48px; }
 }
-@-moz-keyframes playTop {
+@keyframes playRightMedium {
+	from { background-position: 0 -96px; }
+	to { background-position: -192px -96px; }
+}
+@keyframes playTopMedium {
 	from { background-position: 0 -144px; }
-	to { background-position: -128px -144px; }
+	to { background-position: -192px -144px; }
+}
+
+/*For big sizes (192 x 256)*/
+@keyframes playBottomBig {
+	from { background-position: 0 0; }
+	to { background-position: -192px 0; }
+}
+@keyframes playLeftBig {
+	from { background-position: 0 -64px; }
+	to { background-position: -192px -64px; }
+}
+@keyframes playRightBig {
+	from { background-position: 0 -128px; }
+	to { background-position: -192px -128px; }
+}
+@keyframes playTopBig {
+	from { background-position: 0 -192px; }
+	to { background-position: -192px -192px; }
+}
+
+/*For large sizes (256 x 256)*/
+@keyframes playBottomLarge {
+	from { background-position: 0 0; }
+	to { background-position: -256px 0; }
+}
+@keyframes playLeftLarge {
+	from { background-position: 0 -64px; }
+	to { background-position: -256px -64px; }
+}
+@keyframes playRightLarge {
+	from { background-position: 0 -128px; }
+	to { background-position: -256px -128px; }
+}
+@keyframes playTopLarge {
+	from { background-position: 0 -192px; }
+	to { background-position: -256px -192px; }
 }
 
 .choose-button {
