--- a/arena.css
+++ b/arena.css
@@ -2,5 +2,15 @@ body {
 	background: #000 none repeat scroll 0 0;
   margin: 0;
   padding: 0;
+  position: relative;
   text-align: center;
+}
+
+canvas {
+	bottom: 0;
+	left: 0;
+	margin: auto;
+	position: absolute;
+	right: 0;
+	top: 0;
 }
