--- a/pokemongo2d/css/estilos.css
+++ b/pokemongo2d/css/estilos.css
@@ -24,7 +24,7 @@ body {
 	position: relative;
 	width: 100%;
 	height: 100%;
-	background: url("../img/grass.jpg") repeat;
+	background: url("../img/pokelab.png") repeat;
 }
 
 .battle {
