--- a/simple-relay-starter/styles/main.scss
+++ b/simple-relay-starter/styles/main.scss
@@ -123,3 +123,27 @@ body {
     display: inline-block;
   }
 }
+
+.pokeboard {
+  display: inline-block;
+  float: none;
+  text-align: center;
+}
+
+.poketile {
+  position: relative;
+  display: inline-block;
+
+  .pokebg {
+    position: relative;
+  }
+  .pokeimg {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    text-align: center;
+  }
+}
