--- a/simple-relay-starter/styles/main.scss
+++ b/simple-relay-starter/styles/main.scss
@@ -138,6 +138,7 @@ body {
     position: relative;
   }
   .pokeimg {
+    display: none;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -145,5 +146,10 @@ body {
     left: 0;
     margin: 0 auto;
     text-align: center;
+  }
+  .activeTile, .correctTile {
+    + .pokeimg {
+      display: block;
+    }
   }
 }
