Fixing redirection issue and adding back button.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -163,4 +163,22 @@ body {
     right: 0;
     left: 0; }
 
+.trasition-wrapper {
+  position: relative;
+  z-index: 1; }
+  .trasition-wrapper .transition-item {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0; }
+
+.token-list .token-menu {
+  padding: 0; }
+  .token-list .token-menu li {
+    list-style: none; }
+.token-list.transition-appear {
+  transform: scale(0); }
+.token-list.transition-appear.transition-appear-active {
+  transform: scale(1); }
+
 /*# sourceMappingURL=main.css.map */
