Added changes to evolution unlocking system.
Changes include verification functions and a new
property to identify if the pokémon evolves.
The following poḱémon from the pokédex should be
added to the game in its specific stage.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -216,8 +216,10 @@ body {
     .stage-menu button .glyphicon, .stage-menu li .glyphicon {
       font-size: 40px; }
 
+.stage h2 {
+  margin-top: 15px; }
 .stage ul {
-  margin-top: 10px; }
+  margin-top: 15px; }
   .stage ul li {
     list-style: none; }
 
