--- a/styles/memory.scss
+++ b/styles/memory.scss
@@ -306,4 +306,14 @@ body {
   h2 {
     margin-top: 15px;
   }
+
+  .tile-board {
+    display: inline-block;
+    width: 100%;
+  }
+
+  .stage-bottom {
+    display: inline-block;
+    width: 100%;
+  }
 }
