--- a/styles/memory.scss
+++ b/styles/memory.scss
@@ -145,12 +145,22 @@ body {
   height: 120px;
   margin: 0 2px;
 
+  div {
+    width: 100%;
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+    border-radius: 100px;
+  }
+
   &:focus {
     outline: none;
   }
 
   .pokebg {
     position: relative;
+    max-width: 120px;
+    margin-top: -20px;
   }
   .pokeimg {
     display: none;
