--- a/styles/memory.scss
+++ b/styles/memory.scss
@@ -133,9 +133,20 @@ body {
   text-align: center;
 }
 
+.ReactFlipCard {
+  border: 1px solid #BBB;
+  border-radius: 100px;
+  position: relative;
+  display: inline-block;
+  padding: 0;
+  width: 120px;
+  height: 120px;
+  margin: 0 2px;
+  overflow: hidden;
+}
 .poketile {
-  //background: url('/img/tile-bg.jpg') no-repeat center center;
-  //background-size: 120px;
+  background: url('/img/tile-bg.jpg') no-repeat center center;
+  background-size: 120px;
   border: 1px solid #BBB;
   border-radius: 100px;
   position: relative;
@@ -163,7 +174,7 @@ body {
     margin-top: -20px;
   }
   .pokeimg {
-    //display: none;
+    display: none;
     position: absolute;
     top: 0;
     bottom: 0;
