Changing Stage and Tile once again to make the flip effect work.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -135,6 +135,11 @@ body {
   height: 120px;
   margin: 0 2px;
   overflow: hidden; }
+  .ReactFlipCard .poketile {
+    background: none;
+    border: none; }
+    .ReactFlipCard .poketile .pokeimg {
+      display: block; }
 
 .poketile {
   background: url("/img/tile-bg.jpg") no-repeat center center;
