--- a/styles/memory.scss
+++ b/styles/memory.scss
@@ -1,112 +1,3 @@
-.type-normal, .type-Normal {
-    background: #8a8a59 !important;
-    background-image: -webkit-linear-gradient(#a8a878,#8a8a59);
-    background-image: linear-gradient(#a8a878,#8a8a59);
-    border-color: #79794e;
-}
-.type-fire, .type-Fire {
-    background: #f08030 !important;
-    background-image: -webkit-linear-gradient(#f08030,#dd6610);
-    background-image: linear-gradient(#f08030,#dd6610);
-    border-color: #b4530d;
-}
-.type-water, .type-Water {
-    background: #6890f0 !important;
-    background-image: -webkit-linear-gradient(#6890f0,#386ceb);
-    background-image: linear-gradient(#6890f0,#386ceb);
-    border-color: #1753e3;
-}
-.type-electric, .type-Electric {
-    background: #f8d030 !important;
-    background-image: -webkit-linear-gradient(#f8d030,#f0c108);
-    background-image: linear-gradient(#f8d030,#f0c108);
-    border-color: #c19b07;
-}
-.type-grass, .type-Grass {
-    background: #78c850 !important;
-    background-image: -webkit-linear-gradient(#78c850,#5ca935);
-    background-image: linear-gradient(#78c850,#5ca935);
-    border-color: #4a892b;
-}
-.type-ice, .type-Ice {
-    background: #98d8d8 !important;
-    background-image: -webkit-linear-gradient(#98d8d8,#69c6c6);
-    background-image: linear-gradient(#98d8d8,#69c6c6);
-    border-color: #45b6b6;
-}
-.type-fighting, .type-Fighting {
-    background: #c03028 !important;
-    background-image: -webkit-linear-gradient(#c03028,#9d2721);
-    background-image: linear-gradient(#c03028,#9d2721);
-    border-color: #82211b;
-}
-.type-poison, .type-Poison {
-    background: #a040a0 !important;
-    background-image: -webkit-linear-gradient(#a040a0,#803380);
-    background-image: linear-gradient(#a040a0,#803380);
-    border-color: #662966;
-}
-.type-ground, .type-Ground {
-    background: #e0c068 !important;
-    background-image: -webkit-linear-gradient(#e0c068,#d4a82f);
-    background-image: linear-gradient(#e0c068,#d4a82f);
-    border-color: #aa8623;
-}
-.type-flying, .type-Flying {
-    background: #a890f0 !important;
-    background-image: -webkit-linear-gradient(#a890f0,#9180c4);
-    background-image: linear-gradient(#a890f0,#9180c4);
-    border-color: #7762b6;
-}
-.type-psychic, .type-Psychic {
-    background: #f85888 !important;
-    background-image: -webkit-linear-gradient(#f85888,#f61c5d);
-    background-image: linear-gradient(#f85888,#f61c5d);
-    border-color: #d60945;
-}
-.type-bug, .type-Bug {
-    background: #a8b820 !important;
-    background-image: -webkit-linear-gradient(#a8b820,#8d9a1b);
-    background-image: linear-gradient(#a8b820,#8d9a1b);
-    border-color: #616b13;
-}
-.type-rock, .type-Rock {
-    background: #b8a038 !important;
-    background-image: -webkit-linear-gradient(#b8a038,#93802d);
-    background-image: linear-gradient(#b8a038,#93802d);
-    border-color: #746523;
-}
-.type-ghost, .type-Ghost {
-    background: #705898 !important;
-    background-image: -webkit-linear-gradient(#705898,#554374);
-    background-image: linear-gradient(#705898,#554374);
-    border-color: #413359;
-}
-.type-dragon, .type-Dragon {
-    background: #7038f8 !important;
-    background-image: -webkit-linear-gradient(#7038f8,#4c08ef);
-    background-image: linear-gradient(#7038f8,#4c08ef);
-    border-color: #3d07c0;
-}
-.type-steel, .type-Steel {
-    background: #b8b8d0 !important;
-    background-image: -webkit-linear-gradient(#b8b8d0,#9797ba);
-    background-image: linear-gradient(#b8b8d0,#9797ba);
-    border-color: #7a7aa7;
-}
-.type-dark, .type-Dark {
-    background: #705848 !important;
-    background-image: -webkit-linear-gradient(#705848,#513f34);
-    background-image: linear-gradient(#705848,#513f34);
-    border-color: #362a23;
-}
-.type-fairy, .type-Fairy {
-    background: #e898e8 !important;
-    background-image: -webkit-linear-gradient(#e898e8,#de6ede);
-    background-image: linear-gradient(#e898e8,#de6ede);
-    border-color: #d547d5;
-}
-
 $spacing: 10px;
 
 body {
@@ -117,188 +8,41 @@ body {
   padding: 0;
 }
 
-.pokepanel {
-  text-align: center;
-  padding-bottom: $spacing * 2;
+.crypto-table {
 
-  button {
-    cursor: pointer;
-    display: inline-block;
+  td {
+    vertical-align: middle !important;
   }
-}
 
-.pokeboard {
-  display: inline-block;
-  float: none;
-  text-align: center;
-}
+  .marked {
+    border: 2px solid black;
+  }
 
-.ReactFlipCard {
-  border: 1px solid #BBB;
-  border-radius: 100px;
-  position: relative;
-  display: inline-block;
-  padding: 0;
-  width: 120px;
-  height: 120px;
-  margin: 0 2px;
-  overflow: hidden;
+  .tile {
+    position: relative;
 
-  .poketile {
-    background: none;
-    border: none;
-    margin: 0;
+    label {
+      font-size: 11px;
+      position: absolute;
+      top: 5px;
+      left: 5px;
+    }
 
-    .pokeimg {
-      display: block;
+    .form-group {
+      margin-bottom: 0;
+    }
+
+    .form-control {
+      border: none;
+      padding: 0;
+      outline: none;
+      max-width: 40px;
+      text-align: center;
+      border-radius: 0;
+      text-transform: uppercase;
     }
   }
 }
-.poketile {
-  background: url('/img/tile-bg.jpg') no-repeat center center;
-  background-size: 120px;
-  border: 1px solid #BBB;
-  border-radius: 100px;
-  position: relative;
-  display: inline-block;
-  padding: 0;
-  width: 120px;
-  height: 120px;
-  margin: 0 2px;
-
-  div {
-    width: 100%;
-    position: relative;
-    height: 100%;
-    overflow: hidden;
-    border-radius: 100px;
-  }
-
-  &:focus {
-    outline: none;
-  }
-
-  .pokebg {
-    position: relative;
-    max-width: 120px;
-    margin-top: -20px;
-  }
-  .pokeimg {
-    display: none;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    margin: 0 auto;
-    text-align: center;
-  }
-  &.activeTile, &.correctTile {
-    background: #000;
-    .pokeimg {
-      display: block;
-    }
-  }
-}
-
-.token {
-  overflow: hidden;
-  border-style: solid;
-  border-width: 7px;
-  border-radius: 100px;
-  min-width: 120px;
-  min-height: 120px;
-  position: relative;
-  display: inline-block;
-
-  img {
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-  }
-}
-
-.token-box {
-  position: relative;
-  width: 120px;
-  margin: 0 12px;
-  padding: 0;
-  float: none;
-  display: inline-block;
-
-  &.inactive {
-    opacity: 0.2;
-  }
-
-  .token-amount {
-    background: #333;
-    border-radius: 100px;
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    padding: 4px 6px;
-    z-index: 1;
-  }
-
-  .token-name {
-    background: #333;
-    border-radius: 100px;
-    position: relative;
-    top: -15px;
-  }
-}
-
-.transition-wrapper {
-  position: relative;
-  z-index: 1;
-  .transition-item {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-  }
-}
-
-.token-list {
-  padding: 20px;
-  transition: transform 0.5s;
-  height: 100vh;
-  box-sizing: border-box;
-
-  h2 {
-    margin-top: 0;
-  }
-  ul{
-    margin-top: 15px;
-
-    li {
-      list-style: none;
-    }
-  }
-
-  &.transition-appear {
-    transform: scale(0);
-  }
-
-  &.transition-appear.transition-appear-active {
-    transform: scale(1);
-  }
-}
-
-.token-link {
-  padding-left: 0px;
-  position: relative;
-  right: 10px;
-  top: 8px;
-
-  p {
-    margin-bottom: 0;
-  }
-}
-
 .stage-menu {
   background: #EEE;
   border: 1px solid transparent;
