--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,128 +2,151 @@
   background: #8a8a59 !important;
   background-image: -webkit-linear-gradient(#a8a878, #8a8a59);
   background-image: linear-gradient(#a8a878, #8a8a59);
-  border-color: #79794e; }
+  border-color: #79794e;
+}
 
 .type-fire, .type-Fire {
   background: #f08030 !important;
   background-image: -webkit-linear-gradient(#f08030, #dd6610);
   background-image: linear-gradient(#f08030, #dd6610);
-  border-color: #b4530d; }
+  border-color: #b4530d;
+}
 
 .type-water, .type-Water {
   background: #6890f0 !important;
   background-image: -webkit-linear-gradient(#6890f0, #386ceb);
   background-image: linear-gradient(#6890f0, #386ceb);
-  border-color: #1753e3; }
+  border-color: #1753e3;
+}
 
 .type-electric, .type-Electric {
   background: #f8d030 !important;
   background-image: -webkit-linear-gradient(#f8d030, #f0c108);
   background-image: linear-gradient(#f8d030, #f0c108);
-  border-color: #c19b07; }
+  border-color: #c19b07;
+}
 
 .type-grass, .type-Grass {
   background: #78c850 !important;
   background-image: -webkit-linear-gradient(#78c850, #5ca935);
   background-image: linear-gradient(#78c850, #5ca935);
-  border-color: #4a892b; }
+  border-color: #4a892b;
+}
 
 .type-ice, .type-Ice {
   background: #98d8d8 !important;
   background-image: -webkit-linear-gradient(#98d8d8, #69c6c6);
   background-image: linear-gradient(#98d8d8, #69c6c6);
-  border-color: #45b6b6; }
+  border-color: #45b6b6;
+}
 
 .type-fighting, .type-Fighting {
   background: #c03028 !important;
   background-image: -webkit-linear-gradient(#c03028, #9d2721);
   background-image: linear-gradient(#c03028, #9d2721);
-  border-color: #82211b; }
+  border-color: #82211b;
+}
 
 .type-poison, .type-Poison {
   background: #a040a0 !important;
   background-image: -webkit-linear-gradient(#a040a0, #803380);
   background-image: linear-gradient(#a040a0, #803380);
-  border-color: #662966; }
+  border-color: #662966;
+}
 
 .type-ground, .type-Ground {
   background: #e0c068 !important;
   background-image: -webkit-linear-gradient(#e0c068, #d4a82f);
   background-image: linear-gradient(#e0c068, #d4a82f);
-  border-color: #aa8623; }
+  border-color: #aa8623;
+}
 
 .type-flying, .type-Flying {
   background: #a890f0 !important;
   background-image: -webkit-linear-gradient(#a890f0, #9180c4);
   background-image: linear-gradient(#a890f0, #9180c4);
-  border-color: #7762b6; }
+  border-color: #7762b6;
+}
 
 .type-psychic, .type-Psychic {
   background: #f85888 !important;
   background-image: -webkit-linear-gradient(#f85888, #f61c5d);
   background-image: linear-gradient(#f85888, #f61c5d);
-  border-color: #d60945; }
+  border-color: #d60945;
+}
 
 .type-bug, .type-Bug {
   background: #a8b820 !important;
   background-image: -webkit-linear-gradient(#a8b820, #8d9a1b);
   background-image: linear-gradient(#a8b820, #8d9a1b);
-  border-color: #616b13; }
+  border-color: #616b13;
+}
 
 .type-rock, .type-Rock {
   background: #b8a038 !important;
   background-image: -webkit-linear-gradient(#b8a038, #93802d);
   background-image: linear-gradient(#b8a038, #93802d);
-  border-color: #746523; }
+  border-color: #746523;
+}
 
 .type-ghost, .type-Ghost {
   background: #705898 !important;
   background-image: -webkit-linear-gradient(#705898, #554374);
   background-image: linear-gradient(#705898, #554374);
-  border-color: #413359; }
+  border-color: #413359;
+}
 
 .type-dragon, .type-Dragon {
   background: #7038f8 !important;
   background-image: -webkit-linear-gradient(#7038f8, #4c08ef);
   background-image: linear-gradient(#7038f8, #4c08ef);
-  border-color: #3d07c0; }
+  border-color: #3d07c0;
+}
 
 .type-steel, .type-Steel {
   background: #b8b8d0 !important;
   background-image: -webkit-linear-gradient(#b8b8d0, #9797ba);
   background-image: linear-gradient(#b8b8d0, #9797ba);
-  border-color: #7a7aa7; }
+  border-color: #7a7aa7;
+}
 
 .type-dark, .type-Dark {
   background: #705848 !important;
   background-image: -webkit-linear-gradient(#705848, #513f34);
   background-image: linear-gradient(#705848, #513f34);
-  border-color: #362a23; }
+  border-color: #362a23;
+}
 
 .type-fairy, .type-Fairy {
   background: #e898e8 !important;
   background-image: -webkit-linear-gradient(#e898e8, #de6ede);
   background-image: linear-gradient(#e898e8, #de6ede);
-  border-color: #d547d5; }
+  border-color: #d547d5;
+}
 
 body {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 .no-padding {
-  padding: 0; }
+  padding: 0;
+}
 
 .pokepanel {
   text-align: center;
-  padding-bottom: 20px; }
-  .pokepanel button {
-    cursor: pointer;
-    display: inline-block; }
+  padding-bottom: 20px;
+}
+.pokepanel button {
+  cursor: pointer;
+  display: inline-block;
+}
 
 .pokeboard {
   display: inline-block;
   float: none;
-  text-align: center; }
+  text-align: center;
+}
 
 .ReactFlipCard {
   border: 1px solid #BBB;
@@ -134,7 +157,8 @@ body {
   width: 120px;
   height: 120px;
   margin: 0 2px;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .poketile {
   background: url("/img/tile-bg.jpg") no-repeat center center;
@@ -146,32 +170,39 @@ body {
   padding: 0;
   width: 120px;
   height: 120px;
-  margin: 0 2px; }
-  .poketile div {
-    width: 100%;
-    position: relative;
-    height: 100%;
-    overflow: hidden;
-    border-radius: 100px; }
-  .poketile:focus {
-    outline: none; }
-  .poketile .pokebg {
-    position: relative;
-    max-width: 120px;
-    margin-top: -20px; }
-  .poketile .pokeimg {
-    display: none;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    margin: 0 auto;
-    text-align: center; }
-  .poketile.activeTile, .poketile.correctTile {
-    background: #000; }
-    .poketile.activeTile .pokeimg, .poketile.correctTile .pokeimg {
-      display: block; }
+  margin: 0 2px;
+}
+.poketile div {
+  width: 100%;
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+  border-radius: 100px;
+}
+.poketile:focus {
+  outline: none;
+}
+.poketile .pokebg {
+  position: relative;
+  max-width: 120px;
+  margin-top: -20px;
+}
+.poketile .pokeimg {
+  display: none;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: 0 auto;
+  text-align: center;
+}
+.poketile.activeTile, .poketile.correctTile {
+  background: #000;
+}
+.poketile.activeTile .pokeimg, .poketile.correctTile .pokeimg {
+  display: block;
+}
 
 .token {
   overflow: hidden;
@@ -181,14 +212,16 @@ body {
   min-width: 120px;
   min-height: 120px;
   position: relative;
-  display: inline-block; }
-  .token img {
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0; }
+  display: inline-block;
+}
+.token img {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
 
 .token-box {
   position: relative;
@@ -196,87 +229,110 @@ body {
   margin: 0 12px;
   padding: 0;
   float: none;
-  display: inline-block; }
-  .token-box.inactive {
-    opacity: 0.2; }
-  .token-box .token-amount {
-    background: #333;
-    border-radius: 100px;
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    padding: 4px 6px;
-    z-index: 1; }
-  .token-box .token-name {
-    background: #333;
-    border-radius: 100px;
-    position: relative;
-    top: -15px; }
+  display: inline-block;
+}
+.token-box.inactive {
+  opacity: 0.2;
+}
+.token-box .token-amount {
+  background: #333;
+  border-radius: 100px;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  padding: 4px 6px;
+  z-index: 1;
+}
+.token-box .token-name {
+  background: #333;
+  border-radius: 100px;
+  position: relative;
+  top: -15px;
+}
 
 .transition-wrapper {
   position: relative;
-  z-index: 1; }
-  .transition-wrapper .transition-item {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0; }
+  z-index: 1;
+}
+.transition-wrapper .transition-item {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
 
 .token-list {
   padding: 20px;
   transition: transform 0.5s;
   height: 100vh;
-  box-sizing: border-box; }
-  .token-list h2 {
-    margin-top: 0; }
-  .token-list ul {
-    margin-top: 15px; }
-    .token-list ul li {
-      list-style: none; }
-  .token-list.transition-appear {
-    transform: scale(0); }
-  .token-list.transition-appear.transition-appear-active {
-    transform: scale(1); }
+  box-sizing: border-box;
+}
+.token-list h2 {
+  margin-top: 0;
+}
+.token-list ul {
+  margin-top: 15px;
+}
+.token-list ul li {
+  list-style: none;
+}
+.token-list.transition-appear {
+  transform: scale(0);
+}
+.token-list.transition-appear.transition-appear-active {
+  transform: scale(1);
+}
 
 .token-link {
   padding-left: 0px;
   position: relative;
   right: 10px;
-  top: 8px; }
-  .token-link p {
-    margin-bottom: 0; }
+  top: 8px;
+}
+.token-link p {
+  margin-bottom: 0;
+}
 
 .stage-menu {
   background: #EEE;
   border: 1px solid transparent;
   border-radius: 4px;
   margin: 10px 0;
-  padding: 15px 0; }
-  .stage-menu button, .stage-menu li {
-    background: #FFF;
-    border: 1px solid transparent;
-    border-radius: 4px;
-    display: inline-block;
-    min-width: 45%;
-    margin-bottom: 5px;
-    margin-right: 5px; }
-    .stage-menu button a, .stage-menu li a {
-      color: inherit;
-      outline: none; }
-      .stage-menu button a:focus, .stage-menu li a:focus {
-        outline: none; }
-    .stage-menu button .glyphicon, .stage-menu li .glyphicon {
-      font-size: 40px; }
+  padding: 15px 0;
+}
+.stage-menu button, .stage-menu li {
+  background: #FFF;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  display: inline-block;
+  min-width: 45%;
+  margin-bottom: 5px;
+  margin-right: 5px;
+}
+.stage-menu button a, .stage-menu li a {
+  color: inherit;
+  outline: none;
+}
+.stage-menu button a:focus, .stage-menu li a:focus {
+  outline: none;
+}
+.stage-menu button .glyphicon, .stage-menu li .glyphicon {
+  font-size: 40px;
+}
 
 .stage .back-link {
-  margin-top: 15px; }
+  margin-top: 15px;
+}
 .stage h2 {
-  margin-top: 15px; }
+  margin-top: 15px;
+}
 .stage .tile-board {
   display: inline-block;
-  width: 100%; }
+  width: 100%;
+}
 .stage .stage-bottom {
   display: inline-block;
-  width: 100%; }
+  width: 100%;
+}
 
 /*# sourceMappingURL=main.css.map */
