--- a/public/css/main.css
+++ b/public/css/main.css
@@ -283,6 +283,20 @@ body {
   transform: scale(1);
 }
 
+.token-nav {
+  position: relative;
+}
+
+.sort-nav {
+  position: absolute;
+  right: 0;
+  background: #FFF;
+  z-index: 1;
+  border: 1px solid #337ab7;
+  border-radius: 4px;
+  padding: 2px;
+}
+
 .token-link {
   padding-left: 0px;
   position: relative;
